# doob

./: CMakeLists.txt  README.md  assign.h  dbg.h  doob.m.sh  doob.m.with.filename.sh  engine.cc  engine.h  event.h  heap.h  logo.xcf  main.cc  main_window.h  makefile  midi_events.h  midi_processor.h  midi_sink.h  midi_track.h  note.h  pattern.h  processor.h  range.h  ringbuffer.h  singleton.cc  singleton.h  sink.h  song.h  song_view.h  stuff.h  time.cc  time.h  track.h  types.cc  types.h
dbus-introspection/: connector.xml  jack_client.xml  ladspa.xml
doob/: doob.connector.cc  doob.connector.h  doob.jack_client.cc  doob.jack_client.h  doob.ladspa.cc  doob.ladspa.h  doob.meta_types.cc  doob.meta_types.h  doob.midi_note.cc  doob.midi_note.h
doob.m/: doob.m.py  graph.py  ladspa.py  main_window.py  plugin_inspector_model.py  plugin_model.py
